# Zappy

./: .gitignore  CMakeLists.txt  Makefile  auteur
Gclient/: Makefile  TO_DO  zappy_Gclient
Gclient/include/: Board.hh  Egg.hh  EventReceiver.hh  GCommunicator.hh  GMap.hh  GPlayer.hh  GUI.hh  Mutex.hh  Tool.hh
Gclient/modelsAndTextures/Gems/: diamond_gray.mtl  (+3 more)
Gclient/src/: Board.cpp  Egg.cpp  EventReceiver.cpp  GCommunicator.cpp  GMap.cpp  GPlayer.cpp  GUI.cpp  Mutex.cpp  Tool.cpp  main.cpp
binaries/: zappy-gfx-linux64.tgz
client/: CMakeLists.txt  Makefile  script.sh  test  test_ia  zappy_ai
client/include/: Client.hpp  IA.hpp  SocketBuf.hpp
client/src/: Client.cpp  IA.cpp  SocketBuf.cpp  action.cpp  get_command.cpp  main.cpp  think.cpp  utils.cpp
common/include/: SocketBuf.hpp  common.h  map.h
common/src/: common.c  player.c
modelsAndTextures/Egg/: Egg.mtl  Tag.txt
modelsAndTextures/Gems/: large_diamond_yellow.mtl
scripts/: 1  alban_titi.sh  alban_toto.sh  caca  caca.sh  coco.sh  server_titi.sh  server_toto.sh  toto
server/: CMakeLists.txt  Makefile  fastClient.c  go.sh  pour_proqui  server  test.sh
server/include/: action.h  client.h  map.h  mon_cmd.h  player.h  server.h
server/src/: action.c  analyse_commande.c  avance.c  client.c  command.c  command_other.c  communication.c  create_map.c  eggs.c  elevation.c  events.c  events_player_res.c  expulse.c  free.c  get_next_line.c  handle_time.c  init_server.c  main.c  map.c  mon_cmd.c  mon_cmd_map.c  mon_cmd_player.c  parse_cmd.c  player.c  set_params.c  signal.c  team.c  time.c  utils.c  voir.c
(+4 files in other folders)
